# bazel-java-test-rule

./: .gitignore  BUILD.bazel  CountLines.java  README.md  WORKSPACE  lines.bzl  misc.txt
foo/: misc.txt
